--- a/Proyecto/style/proyecto.css
+++ b/Proyecto/style/proyecto.css
@@ -88,7 +88,8 @@ main {
   left: 0;
   width: 220px;
   height: 100vh;
-  background: linear-gradient(to right, #b9bbbe, #fad502);
+  background: linear-gradient(to bottom, #3d79d4, #ffffff);
+  color: #000;
   padding: 20px;
   overflow-y: auto;
   z-index: 0; /* detrás de top-intro */
